--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Experience VR</title>
+    <title>Argentina</title>
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Raleway" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
   </head>
   <body>
     <header>
@@ -29,22 +31,46 @@
     </div>
     
     <div class="main-content">
-      <div class="card">
+        <div data-aos="fade-right">
+      <div class="card right">
         <i class="material-icons">update</i>
         <h1>History</h1>
+        <div class="text">
         <p>First explored in 1516 by Juan Diaz de Solis, Argentina developed slowly under Spanish colonial rule. Argentinians set up their own government in 1810. On July 9, 1816, independence was formally declared from Spanish rule.</p>
         <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>
+        </div>  
       </div>
-      <div class="card">
+    </div>
+      <div class="card left">
+          <div data-aos="fade-left">
         <i class="material-icons icon">account_balance</i>
         <h1>Culture</h1>
+        <div class="text">
         <p>Argentina is considered one of the melting pots of Latin America. With a sizable population of Italian, French, German, and even Japanese decent.
           The official language of Argentina is Spanish, but many languages can be spoken such as German, Italian, and other European languages.
         </p>
+        </div>
+      </div>
+        <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>        
+      </div>
+      <div class="card right">
+          <div data-aos="fade-right">
+        <i class="material-icons icon">local_dining</i>
+        <h1>Cuisine</h1>
+        <div class="text">
+        <p>Argentina is considered one of the melting pots of Latin America. With a sizable population of Italian, French, German, and even Japanese decent.
+          The official language of Argentina is Spanish, but many languages can be spoken such as German, Italian, and other European languages.
+        </p>
+        </div>
+      </div>
         <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>        
       </div>
     <footer>
       <span>&copy;2019 Argentina Info, The Blog</span>
     </footer>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
