--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@
         <i class="material-icons icon">local_dining</i>
         <h1>Cuisine</h1>
         <div class="text">
-        <p>Argentina is considered one of the melting pots of Latin America. With a sizable population of Italian, French, German, and even Japanese decent.
-          The official language of Argentina is Spanish, but many languages can be spoken such as German, Italian, and other European languages.
+        <p>Besides many of the pasta, sausage and dessert dishes common to continental Europe, 
+          Argentines enjoy a wide variety of Indigenous and Criollo creations, 
+          including empanadas (a small stuffed pastry), locro (a mixture of corn, 
+          beans, meat, bacon, onion, and gourd), humita and mate.
         </p>
         </div>
       </div>
