--- a/index.html
+++ b/index.html
@@ -31,42 +31,66 @@
     </div>
     
     <div class="main-content">
-        <div data-aos="fade-right">
       <div class="card right">
-        <i class="material-icons">update</i>
-        <h1>History</h1>
-        <div class="text">
+        <div data-aos="fade-right">
+        <div>
+          <img class="img-left" src="sander-crombach-595415-unsplash.jpg"></img>
+        </div>
+      </div>
+      <div data-aos="fade-left">
+        <div class="text-left">
+            <i class="material-icons">update</i>
+          <h1>History</h1>
+          <div class="text">
         <p>First explored in 1516 by Juan Diaz de Solis, Argentina developed slowly under Spanish colonial rule. Argentinians set up their own government in 1810. On July 9, 1816, independence was formally declared from Spanish rule.</p>
         <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>
-        </div>  
+        </div>
+      </div>
       </div>
     </div>
-      <div class="card left">
+    <div class="main-content">
+        <div class="card right">
+        <div data-aos="fade-left">
+          <div class="text-right">
+              <i class="material-icons icon">local_dining</i>
+              <h1>Cuisine</h1>
+              <div class="text">
+              <p>Besides many of the pasta, sausage and dessert dishes common to continental Europe, 
+                Argentines enjoy a wide variety of Indigenous and Criollo creations, 
+                including empanadas (a small stuffed pastry), locro (a mixture of corn, 
+                beans, meat, bacon, onion, and gourd), humita and mate.
+              </p>      
+          <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>
+          </div>
+        </div>
+      </div>
+      <div data-aos="fade-right">
+          <div>
+            <img class="img-right" src="henrique-felix-113545-unsplash.jpg"></img>
+          </div>
+        </div>
+      </div>
+      <div class="main-content">
+          <div class="card right">
+            <div data-aos="fade-right">
+              <div>
+                <img class="img-culture" src="ayoub-az-801078-unsplash.jpg"></img>
+              </div>
+            </div>
           <div data-aos="fade-left">
-        <i class="material-icons icon">account_balance</i>
-        <h1>Culture</h1>
-        <div class="text">
-        <p>Argentina is considered one of the melting pots of Latin America. With a sizable population of Italian, French, German, and even Japanese decent.
-          The official language of Argentina is Spanish, but many languages can be spoken such as German, Italian, and other European languages.
-        </p>
+            <div class="text-left">
+                <i class="material-icons icon">account_balance</i>
+                <h1>Culture</h1>
+                <div class="text">
+                <p>Argentina is considered one of the melting pots of Latin America. With a sizable population of Italian, French, German, and even Japanese decent.
+                  The official language of Argentina is Spanish, but many languages can be spoken such as German, Italian, and other European languages.
+                </p>
+            <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>
+            </div>
+          </div>
         </div>
-      </div>
-        <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>        
-      </div>
-      <div class="card right">
-          <div data-aos="fade-right">
-        <i class="material-icons icon">local_dining</i>
-        <h1>Cuisine</h1>
-        <div class="text">
-        <p>Besides many of the pasta, sausage and dessert dishes common to continental Europe, 
-          Argentines enjoy a wide variety of Indigenous and Criollo creations, 
-          including empanadas (a small stuffed pastry), locro (a mixture of corn, 
-          beans, meat, bacon, onion, and gourd), humita and mate.
-        </p>
         </div>
-      </div>
-        <a class="btn btn-info" href="https://en.wikipedia.org/wiki/Argentina">Learn more</a>        
-      </div>
+    </div>
     <footer>
       <span>&copy;2019 Argentina Info, The Blog</span>
     </footer>
